# Parquet-Gym

./: .dockerignore  .gitignore  Dockerfile  R&D.md  README.md  benchmark.py  config.toml  requirements.txt
.github/workflows/: benchmark.yml
benchmark/: leaderboard.ipynb  plot_leaderboard.py
format-study/: .gitignore  Cargo.toml  README.md  data.parquet
format-study/benches/: metadata.rs  wide_parquet.rs
format-study/python/: allocation.py  allocation_analysis.ipynb  generate_wide_table.py  plot_result.py  wide_table_analysis.ipynb  wide_table_study.py
format-study/src/: lib.rs  simd_thrift.rs
predicates/: README.md
readers/arrow-cpp/: CMakeLists.txt
readers/arrow-cpp/src/: main.cpp
readers/arrow-rs/: Cargo.toml
readers/arrow-rs/src/: main.rs
readers/pyarrow/: README.md  parquet_to_arrow.py  requirements.txt
workloads/: tpch-gen.py  tpch_gen.py
