[package]
name = "format-study"
version = "0.1.0"
edition = "2021"

[dependencies]
# arrow = { git = "https://github.com/tustvold/arrow-rs.git", branch = "thrift-borrow" }
# parquet = { git = "https://github.com/tustvold/arrow-rs.git", branch = "thrift-borrow" }

# arrow = { git = "https://github.com/XiangpengHao/arrow-rs.git", branch = "metadata-bench" }
# parquet = { git = "https://github.com/XiangpengHao/arrow-rs.git", branch = "metadata-bench" }
arrow = { path = "../../arrow-rs/arrow" }
parquet = { path = "../../arrow-rs/parquet" }
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thrift = "0.17.0"
mimalloc = { version = "*", optional = true }
chrono = "0.4.38"
varint-simd = { version = "0.4.0", optional = true }
clap = { version = "4.5.4", features = ["derive"] }
pprof = { version = "0.13", features = ["flamegraph"] }

[features]
mimalloc = ["dep:mimalloc"]
simd = ["dep:varint-simd"]

[dev-dependencies]
criterion = "0.5.1"

[profile.bench]
debug = true

[profile.release]
debug = true

[[bench]]
name = "metadata"
harness = false

[[bin]]
name = "generator"

[[bin]]
name = "wide_table_bench"
